--- a/templates/main/beach.html.twig
+++ b/templates/main/beach.html.twig
@@ -1,6 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+
+
+
+
+
+{% block title %}
+Page plages - Hello MainController!
+{% endblock %}
 
 {% block body %}
 <style>
