--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+
+
+
+{% block title %}
+Page index - Hello MainController!
+{% endblock %}
 
 {% block body %}
 <style>
