--- a/templates/main/mountain.html.twig
+++ b/templates/main/mountain.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+
+{% block title %}
+page Montagne - Hello MainController!
+{% endblock %}
 
 {% block body %}
 <style>
