--- a/templates/main/beach.html.twig
+++ b/templates/main/beach.html.twig
@@ -1,27 +1,21 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}La météo des plages{% endblock %}
 
+{% block beach_active %}active{% endblock %}
 
+{% block content %}
 
+<h1>La météo des plages</h1>
 
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda repellendus nisi illum
+    necessitatibus
+    officiis, quaerat aspernatur at animi sapiente expedita praesentium dignissimos. Unde iusto eveniet
+    cum.
+    Dolorum molestias accusamus vero.</p>
 
-{% block title %}
-Page plages - Hello MainController!
-{% endblock %}
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit et eligendi cum officia. Neque
+    dignissimos veniam libero itaque molestias doloribus delectus, corporis, quia dolores quasi suscipit
+    maiores sunt? Qui, omnis?</p>
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Symfony/symfo-challenge-cle-meteo-SimonDelaporte1/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Symfony/symfo-challenge-cle-meteo-SimonDelaporte1/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
