--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,25 +1,24 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Bienvenue sur la météo des villes{% endblock %}
 
+{% block home_active %}active{% endblock %}
 
+{% block content %}
 
-{% block title %}
-Page index - Hello MainController!
-{% endblock %}
+    <!-- Content (les pages) -->
+    <div class="col-9">
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+        <h1 class="mb-5">Bienvenue sur la météo des villes !</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        <div class="item item--bg-snow">
+            <div class="item--city"><a href="#">Annecy</a></div>
+            <div class="item--forecast">29-01 : -4°C / 2°C</div>
+        </div>
+        <div class="item item--bg-rain">
+            <div class="item--city"><a href="#">Biarritz</a></div>
+            <div class="item--forecast">29-01 : -5°C / 0°C</div>
+        </div>
+    </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Symfony/symfo-challenge-cle-meteo-SimonDelaporte1/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Symfony/symfo-challenge-cle-meteo-SimonDelaporte1/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
