--- a/templates/main/mountain.html.twig
+++ b/templates/main/mountain.html.twig
@@ -1,23 +1,20 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}
-page Montagne - Hello MainController!
-{% endblock %}
+{% block title %}La météo des montagnes{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block mountain_active %}active{% endblock %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+{% block content %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Symfony/symfo-challenge-cle-meteo-SimonDelaporte1/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Symfony/symfo-challenge-cle-meteo-SimonDelaporte1/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>
+<h1>La météo des montagnes</h1>
+
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam officia optio nam, porro accusamus
+    ipsa. Repellendus ut expedita tempora, dolore rem explicabo sapiente aperiam eius, quibusdam dolores
+    nulla, impedit sequi.</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quae, dolorem provident at debitis,
+    dolor nemo cum quidem eveniet aliquam odit eum consequuntur alias accusamus neque ab sed recusandae
+    illum!</p>
+
 {% endblock %}
