WIP intégration graphique

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,16 +45,7 @@
 
                 <!-- Code du widget -->
                 <div id="widget">
-
-                    <!-- Si ville sélectionnée -->
-                    <p><b>Bordeaux</b></p>
-                    <p>29-01-2020</p>
-                    <p><img src="images/sun-cloud.png"></p>
-                    <p>0°C / 10°C</p>
-
-                    <!-- Si ville non sélectionnée -->
-                    <div>Sélectionnez une ville<br>dans la liste de gauche</div>
-
+                    {{ include('main/widget.html.twig') }}
                 </div>
 
             </div>
